# sf_convex

./: .env.example  .gitignore  README.md  detail_mvp.md  mcp_config.json  plan.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: fastapi.mdc  project-strcuture.mdc
.kiro/specs/ai-video-tutor/: design.md  requirements.md  tasks.md
.kiro/specs/ai-video-tutor-platform/: requirements.md
.kiro/specs/mcp-use-context7-integration/: design.md  requirements.md  tasks.md
.kiro/specs/s3-convex-integration/: design.md  requirements.md  tasks.md
.serena/: project.yml
agents/: test_context7_integration.py  test_videoplanner_context7_integration.py
agents/docs/: context7_integration.md
agents/llm_config/: interfaces.py  llm_config_facade.py  ui_manager.py
agents/mllm_tools/: github.py  litellm.py  openrouter.py  vertex_ai.py
agents/src/: suppress_warnings.py
agents/src/config/: config.py  fallback.py  health_check.py  logging_config.py  mcp_config.py  service.py  validation.py
agents/src/core/: code_generator.py  parse_video.py  video_planner.py  video_renderer.py
agents/src/mcp_client/: README.md  __init__.py  agent.py  cache.py  client.py  context7_docs.py  optimization.py  validate_agent.py
agents/src/rag/: __init__.py  rag_integration.py  vector_store.py
agents/src/storage/: s3_client.py  s3_storage.py
agents/src/utils/: allowed_models.json  utils.py  visual_error_detection.py
agents/task_generator/: parse_prompt.py
agents/task_generator/prompts_raw/: __init__.py  banned_reasonings.txt  prompt_animation_fix_error.txt  prompt_animation_rag_query_generation_fix_error.txt  prompt_animation_simple.txt  prompt_context_learning_technical_implementation.txt  prompt_context_learning_vision_storyboard.txt  prompt_fix_error.txt  prompt_manim_cheatsheet.txt  prompt_rag_query_generation_code.txt  prompt_rag_query_generation_narration.txt  prompt_rag_query_generation_technical.txt  prompt_scene_implementation.txt  prompt_scene_vision_storyboard.txt  prompt_visual_fix_error.txt
backend/: .env.example  celery_worker.py  generate_video.py  main.py  pyproject.toml  requirements.txt  run_dev.py  start_services.sh
backend/app/: __init__.py  main.py
backend/app/adapters/: video_adapters.py
backend/app/api/: video.py  video_generation.py
backend/app/core/: celery_app.py  config.py  redis_client.py  settings.py
backend/app/schemas/: video.py  video_generation.py
backend/app/services/: asset_manager.py  convex_s3_sync.py  error_recovery_manager.py  s3_utilities.py
backend/app/tasks/: __init__.py  hello_tasks.py  video_generation_tasks.py  video_tasks.py
backend/convex/: api.py
backend/convex/functions/: __init__.py  (+4 more)
backend/llm_config/: __init__.py  configuration.py  notifications.py  provider_manager.py  validation.py
backend/mllm_tools/: gemini.py  openai.py  utils.py
backend/task_generator/: __init__.py
docs/: IMPORT_GUIDE.md  api_structure.md  detail.md  detail_mvp.md  endpoint_comparison.md  plan.md  s3_storage_plan.md  step1.md  troubleshooting.md  usage_guide.md  video_generation_api.md
(+39 files in other folders)
